--- a/README
+++ b/README
@@ -1,17 +1,42 @@
-Author:Jose Machava <jose.s.machava@gmail.com> add your name here
-Author URI: http://josemachava.com
-Company:Xindir LDA
-Company URI:http://xindiri.com
-Description:Xindiri inc
-Copyrigth:2017 (c)
+# Bayport CMS
 
-This is kutiva elearning platform for students 
-How to run this project
-kutiva usei django you shoul be familiar working with django.
-Instructions
-1 install python3.6 on your machine go http//:python.org
-2 install pip 
-3 go to project directory open cmd or terminal
-4 install virtualenv run pip install virtualenv after install virtualenv run source venv/bin/activate
-5 run pip install -r requirements
-6 then run python3.6 manage.py runserver
+
+This is kutiva e-learning platform for people to learn everything related to programing for people that
+are interested in learning how to program an improve their programming skills
+
+
+# How to Use
+This application use django 2 frammework a python web framework in order to ru this application you should have python3.6 or greater installed in your machine.
+To use this project, follow these steps:
+
+
+
+1.Install Python on your operating System
+  [Install Python](https://www.python.org)
+2.Install pip, python package management
+  [Get Pip](https://pip.pypa.io/en/stable/installing/)
+
+3. Install virtualvenv
+
+    ```$ pip install virtualvenv ```
+
+4. Create your working environment.
+
+    ```$ virtualvenv venv ```
+
+5. Active your virtual environment
+
+    ```$ source venv/bin/activate ```
+
+6. Install all python packages on your virtual environment<br />
+    ```$ pip install -r requiremenets.txt ```
+#  How to run
+To run this project, follow these steps:
+
+
+
+6. Start the django server
+
+```$ python manage.py runserver ```
+
+
