update the readme

--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 # Bayport CMS
 
 
-This is kutiva e-learning platform for people to learn everything related to programing for people that
-are interested in learning how to program an improve their programming skills
+This is kutiva e-learning platform  for people that are interested in learning how to program an improve their programming skills.
 
 
 # How to Use
