change readme title

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Bayport CMS
+Kutiva CMS
 
 
 This is kutiva e-learning platform  for people that are interested in learning how to program an improve their programming skills.
